2006-07-13  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Some cosmetic cleanups.

	* inst/: Removed vignette on clustering. That and much more is now
	described in the JSS paper on text mining. Based upon that
	article an elaborated vignette will be incorporated in the future.

2006-07-01  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Updated generic S4 methods to comply with signature changes
	in newer versions of R (> 2.3)

2006-03-12  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* ext/R/importRIS.R: Automatic RIS import is now possible.

2006-02-14  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R: Added RIS HTML input format.

2006-01-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R: Removed bug that caused invalid text document
	collections when handling many input files.

2006-01-11  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R: Restructured and extended file import
	mechanism.

	* inst/doc/clustering.Rnw: Adapted vignette for use with
	ReutNews.rda

	* man/ReutNews.Rd: Documentation for ReutNews.rda

	* data/ReutNews.rda: A tiny Reuters21578 example data set.

2005-12-22  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* inst/doc/clustering.Rnw: Wrote a small vignette to present the
	clustering facilities of this package.

2005-12-15  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/aobjects.R: Changed package document structure to avoid class
	dependency problems.

2005-12-06  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* Wrote a script for the ModLewis Split for the Reuters-21578 XML
	data set.

	* Finished documentation and reordered directory structure. Now "R
	CMD check textmin" works without errors.

2005-12-04  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* src/: Various splits can now be easily created for the
	Reuters21578 data set.

2005-12-03  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* Updated documentation

2005-11-30  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* Wrote R documentation for some classes and methods.
