@@ -3,81 +3,97 @@
 # Accessor functions are implemented as described in "S4 Classes in 15 pages, more or less"
 
 # Text document
-setClass("textdocument",
-         representation(author = "character",
-                        datetimestamp = "character",
-                        description = "character",
-                        id = "integer",
-                        origin = "character",
-                        heading = "character"),
-         contains = c("character"))
+setClass("TextDocument",
+         representation(Author = "character",
+                        DateTimeStamp = "character",
+                        Description = "character",
+                        ID = "integer",
+                        Origin = "character",
+                        Heading = "character",
+                        LocalMetaData = "list"))
 
-if (!isGeneric("author")) {
-    if (is.function("author"))
-        fun <- author
+if (!isGeneric("Author")) {
+    if (is.function("Author"))
+        fun <- Author
     else
-        fun <- function(object) standardGeneric("author")
-    setGeneric("author", fun)
+        fun <- function(object) standardGeneric("Author")
+    setGeneric("Author", fun)
 }
-setMethod("author", "textdocument", function(object) object@author)
+setMethod("Author", "TextDocument", function(object) object@Author)
 
-if (!isGeneric("datetimestamp")) {
-    if (is.function("datetimestamp"))
-        fun <- timestamp
+if (!isGeneric("DateTimeStamp")) {
+    if (is.function("DateTimeStamp"))
+        fun <- DateTimeStamp
     else
-        fun <- function(object) standardGeneric("datetimestamp")
-    setGeneric("datetimestamp", fun)
+        fun <- function(object) standardGeneric("DateTimeStamp")
+    setGeneric("DateTimeStamp", fun)
 }
-setMethod("datetimestamp", "textdocument", function(object) object@timestamp)
+setMethod("DateTimeStamp", "TextDocument", function(object) object@timestamp)
 
-if (!isGeneric("description")) {
-    if (is.function("description"))
-        fun <- description
-    else fun <- function(object) standardGeneric("description")
-    setGeneric("description", fun)
+if (!isGeneric("Description")) {
+    if (is.function("Description"))
+        fun <- Description
+    else fun <- function(object) standardGeneric("Description")
+    setGeneric("Description", fun)
 }
-setMethod("description", "textdocument", function(object) object@description)
+setMethod("Description", "TextDocument", function(object) object@Description)
 
-if (!isGeneric("id")) {
-    if (is.function("id"))
-        fun <- id
-    else fun <- function(object) standardGeneric("id")
-    setGeneric("id", fun)
+if (!isGeneric("ID")) {
+    if (is.function("ID"))
+        fun <- ID
+    else fun <- function(object) standardGeneric("ID")
+    setGeneric("ID", fun)
 }
-setMethod("id", "textdocument", function(object) object@id)
+setMethod("ID", "TextDocument", function(object) object@ID)
 
-if (!isGeneric("origin")) {
-    if (is.function("origin"))
-        fun <- origin
-    else fun <- function(object) standardGeneric("origin")
-    setGeneric("origin", fun)
+if (!isGeneric("Origin")) {
+    if (is.function("Origin"))
+        fun <- Origin
+    else fun <- function(object) standardGeneric("Origin")
+    setGeneric("Origin", fun)
 }
-setMethod("origin", "textdocument", function(object) object@origin)
+setMethod("Origin", "TextDocument", function(object) object@Origin)
 
-if (!isGeneric("heading")) {
-    if (is.function("heading"))
-        fun <- heading
-    else fun <- function(object) standardGeneric("heading")
-    setGeneric("heading", fun)
+if (!isGeneric("Heading")) {
+    if (is.function("Heading"))
+        fun <- Heading
+    else fun <- function(object) standardGeneric("Heading")
+    setGeneric("Heading", fun)
 }
-setMethod("heading", "textdocument", function(object) object@heading)
+setMethod("Heading", "TextDocument", function(object) object@Heading)
 
+# Inherited text documents
+# Plain text documents
+setClass("PlainTextDocument",
+         representation(FileName = "character", Cached = "numeric"),
+         contains = c("character", "TextDocument"))
+# XML text document
+# If XMLDocument would be a S4 class, we could directly inherit from it
+# Instead we have to do a work-around with a list
+setClass("XMLTextDocument",
+         representation(FileName = "character", Cached = "numeric"),
+         contains = c("list", "TextDocument"))
 
 # Text document collection
-setClass("textdoccol",
+setClass("TextDocCol",
+         representation(GlobalMetaData = "list"),
          contains = c("list"))
 
+# Repository for text document collections
+setClass("TextRepository",
+         representation(RepresentationMetaData = "list"),
+         contains = c("list"))
 
 # Term-document matrix
-setClass("termdocmatrix",
-         representation(weighting = "character"),
+setClass("TermDocMatrix",
+         representation(Weighting = "character"),
          contains = c("matrix"))
 
-if (!isGeneric("weighting")) {
-    if (is.function("weighting"))
-        fun <- weighting
+if (!isGeneric("Weighting")) {
+    if (is.function("Weighting"))
+        fun <- Weighting
     else
-        fun <- function(object) standardGeneric("weighting")
-    setGeneric("weighting", fun)
+        fun <- function(object) standardGeneric("Weighting")
+    setGeneric("Weighting", fun)
 }
-setMethod("weighting", "termdocmatrix", function(object) object@weighting)
+setMethod("Weighting", "TermDocMatrix", function(object) object@Weighting)
