@@ -1,3 +1,13 @@
+2006-08-06  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/textdoccol.R: Adapted code for new class structure. Wrote
+	several transform and filter functions operating on text document
+	collections (alias text document databases).
+
+	* R/aobjects.R: Adapted class structure with inheritance,
+	repositories and additional meta data. Loading files on demand is
+	now possible.
+
 2006-07-13  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/: Some cosmetic cleanups.
